Fix tags not showing on edit profile page

--- a/quiet/front-service/src/main/resources/static/css/edit-profile.css
+++ b/quiet/front-service/src/main/resources/static/css/edit-profile.css
@@ -50,3 +50,8 @@
 .shown {
     display: block;
 }
+
+.tags-container {
+    display: flex;
+    flex-wrap: wrap;
+}
